--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://eileenkolster.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eileenkolster/Eileen-Kolster"
+    "url": "https://github.com/timoheddes/eileen-kolster"
   },
   "private": true,
   "version": "0.1.0",
@@ -28,9 +28,10 @@
     "@fontsource/poppins": "^5.2.6",
     "@fontsource/reenie-beanie": "^5.2.6",
     "@fontsource/swanky-and-moo-moo": "^5.2.6",
+    "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.517.0",
-    "motion": "^12.16.0",
+    "lucide-react": "^0.518.0",
+    "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "splitting": "^1.1.0",
@@ -39,18 +40,19 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@eslint/js": "^9.29.0",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/splitting": "^1.0.6",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.34.1",
+    "vite": "^6.3.5",
+    "vite-plugin-image-optimizer": "^1.1.9"
   }
 }
