add speed insights

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fontsource/livvic": "^5.2.6",
     "@fontsource/poppins": "^5.2.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "circletype": "^2.3.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
