--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/timoheddes/eileen-kolster"
   },
   "private": true,
-  "version": "1.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -30,7 +30,6 @@
     "circletype": "^2.3.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.522.0",
     "motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -45,16 +44,20 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/splitting": "^1.0.6",
+    "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "rollup-plugin-visualizer": "^6.0.3",
     "sharp": "^0.34.2",
     "svgo": "^4.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.3",
-    "vite-plugin-image-optimizer": "^2.0.2"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "^2.0.2",
+    "vite-plugin-pwa": "^1.0.1"
   }
 }
