Direct sharing page

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "splitting": "^1.1.0",
     "wavesurfer.js": "^7.9.9",
     "wouter": "^3.7.1",
@@ -43,6 +44,7 @@
     "@types/node": "^24.0.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-helmet": "^6.1.11",
     "@types/splitting": "^1.0.6",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-react": "^4.6.0",
