improve LCP and update deps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Eileen-Kolster",
+  "name": "eileen-kolster",
   "description": "Eileen Kolster's portfolio website",
   "author": "Timo Heddes",
   "license": "MIT",
@@ -21,45 +21,46 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@fontsource/baloo-da-2": "^5.2.6",
-    "@fontsource/cute-font": "^5.2.6",
-    "@fontsource/livvic": "^5.2.6",
+    "@fontsource/baloo-da-2": "^5.2.8",
+    "@fontsource/cute-font": "^5.2.8",
+    "@fontsource/livvic": "^5.2.7",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "circletype": "^2.3.0",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
-    "motion": "^12.23.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "motion": "^12.23.22",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
     "splitting": "^1.1.0",
-    "wavesurfer.js": "^7.9.9",
+    "wavesurfer.js": "^7.10.3",
     "wouter": "^3.7.1",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
+    "@eslint/js": "^9.36.0",
     "@fullhuman/postcss-purgecss": "^7.0.2",
-    "@types/node": "^24.0.12",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/node": "^24.6.1",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
     "@types/react-helmet": "^6.1.11",
     "@types/splitting": "^1.0.6",
-    "@vitejs/plugin-legacy": "^7.0.0",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
+    "@vitejs/plugin-legacy": "^7.2.1",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "rollup-plugin-critical": "^1.0.15",
     "rollup-plugin-visualizer": "^6.0.3",
-    "sharp": "^0.34.2",
+    "sharp": "^0.34.4",
     "svgo": "^4.0.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.36.0",
-    "vite": "^7.0.3",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.7",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-image-optimizer": "^2.0.2",
-    "vite-plugin-pwa": "^1.0.1"
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
