--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/splitting": "^1.0.6",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
