--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/timoheddes/eileen-kolster"
   },
   "private": true,
-  "version": "1.3.2",
+  "version": "1.3.5",
   "type": "module",
   "scripts": {
     "preview": "vite preview",
@@ -21,9 +21,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@fontsource/baloo-da-2": "^5.2.8",
+    "@fontsource-variable/work-sans": "^5.2.8",
     "@fontsource/cute-font": "^5.2.8",
-    "@fontsource/livvic": "^5.2.7",
+    "@fontsource/baloo-da-2": "^5.2.8",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "circletype": "^2.3.0",
