--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "url": "https://github.com/timoheddes/eileen-kolster"
   },
   "private": true,
-  "version": "1.4.2",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "preview": "vite preview",
     "dev": "vite",
     "build": "tsc -b && vite build --base=/",
-    "optimize": "bash convert-images.sh && bash convert-audio.sh",
+    "optimize": "bash convert-images.sh && bash convert-audio.sh && bash convert-video.sh",
     "convert-images": "bash convert-images.sh",
     "convert-audio": "bash convert-audio.sh",
-    "lint": "eslint ."
+    "convert-video": "bash convert-video.sh",
+    "lint": "eslint .",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\""
   },
   "dependencies": {
     "@fontsource-variable/work-sans": "^5.2.8",
-    "@fontsource/cute-font": "^5.2.8",
     "@fontsource/baloo-da-2": "^5.2.8",
+    "@fontsource/cute-font": "^5.2.8",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "circletype": "^2.3.0",
@@ -48,9 +51,11 @@
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "prettier": "^3.8.1",
     "rollup-plugin-critical": "^1.0.15",
     "rollup-plugin-visualizer": "^6.0.3",
     "sharp": "^0.34.4",
